--- a/files/testEnv2.yml
+++ b/files/testEnv2.yml
@@ -1,22 +1,103 @@
 name: testEnv2
 channels:
-- defaults
+  - intel
+  - defaults
 dependencies:
-- ca-certificates=2017.08.26=h1d4fec5_0
-- certifi=2017.11.5=py27h71e7faf_0
-- libedit=3.1=heed3624_0
-- libffi=3.2.1=hd88cf55_4
-- libgcc-ng=7.2.0=h7cc24e2_2
-- libstdcxx-ng=7.2.0=h7a57d05_2
-- ncurses=6.0=h9df7e31_2
-- openssl=1.0.2n=hb7f436b_0
-- pip=9.0.1=py27ha730c48_4
-- python=2.7.14=h1571d57_29
-- readline=7.0=ha6073c6_4
-- setuptools=36.5.0=py27h68b189e_0
-- sqlite=3.20.1=hb898158_2
-- tk=8.6.7=hc745277_3
-- wheel=0.30.0=py27h2bc6bb2_1
-- zlib=1.2.11=ha838bed_2
-prefix: /home/user/.conda/envs/testEnv2
+  - icu=58.2=h9c2bf20_1
+  - libgcc-ng=8.2.0=hdf63c60_1
+  - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libxml2=2.9.8=hf84eae3_0
+  - libxslt=1.1.32=h1312cb7_0
+  - lxml=4.2.5=py36hefd8a0e_0
+  - pandas-datareader=0.7.0=py36_0
+  - wrapt=1.10.11=py36h14c3975_2
+  - asn1crypto=0.24.0=py36_3
+  - backcall=0.1.0=py36_2
+  - backports=1.0=py36_9
+  - bleach=2.1.3=py36_2
+  - bzip2=1.0.6=17
+  - certifi=2018.1.18=py36_2
+  - cffi=1.11.5=py36_3
+  - chardet=3.0.4=py36_3
+  - cryptography=2.3=py36_0
+  - cycler=0.10.0=py36_7
+  - decorator=4.3.0=py36_3
+  - entrypoints=0.2.3=py36_2
+  - freetype=2.9=3
+  - get_terminal_size=1.0.0=py36_7
+  - html5lib=1.0.1=py36_4
+  - icc_rt=2019.1=intel_144
+  - idna=2.6=py36_3
+  - intel-openmp=2019.1=intel_144
+  - intelpython=2019.1=0
+  - ipykernel=4.6.1=py36_2
+  - ipython=6.3.1=py36_3
+  - ipython_genutils=0.2.0=py36_2
+  - ipywidgets=7.0.0=py36_2
+  - jedi=0.12.0=py36_2
+  - jinja2=2.9.6=py36_2
+  - jsonschema=2.6.0=py36_2
+  - jupyter=1.0.0=py36_7
+  - jupyter_client=5.1.0=py36_5
+  - jupyter_console=5.1.0=py36_2
+  - jupyter_core=4.4.0=py36_6
+  - kiwisolver=1.0.1=py36_2
+  - libffi=3.2.1=11
+  - libpng=1.6.35=0
+  - libsodium=1.0.16=3
+  - markupsafe=1.0=py36_3
+  - matplotlib=2.2.3=py36_0
+  - mistune=0.8.3=py36_2
+  - mkl=2019.1=intel_144
+  - mkl_fft=1.0.6=py36_2
+  - mkl_random=1.0.2=py36_0
+  - nbconvert=5.2.1=py36_2
+  - nbformat=4.4.0=py36_2
+  - notebook=5.2.2=py36_1
+  - numexpr=2.6.8=py36_1
+  - numpy=1.15.4=py36_2
+  - numpy-base=1.15.4=py36_2
+  - openssl=1.0.2p=0
+  - pandas=0.23.4=py36_4
+  - pandocfilters=1.4.1=py36_2
+  - parso=0.2.0=py36_2
+  - path.py=11.0.1=py36_2
+  - pexpect=4.2.1=py36_4
+  - pickleshare=0.7.4=py36_3
+  - pip=9.0.3=py36_1
+  - prompt_toolkit=1.0.15=py36_2
+  - ptyprocess=0.5.2=py36_2
+  - pycparser=2.18=py36_2
+  - pygments=2.2.0=py36_5
+  - pyopenssl=17.5.0=py36_2
+  - pyparsing=2.2.0=py36_2
+  - pysocks=1.6.7=py36_1
+  - python=3.6.5=11
+  - python-dateutil=2.6.0=py36_12
+  - pytz=2018.4=py36_3
+  - pyzmq=16.0.2=py36_6
+  - requests=2.20.0=py36_0
+  - scipy=1.1.0=np115py36_7
+  - setuptools=39.0.1=py36_0
+  - simplegeneric=0.8.1=py36_7
+  - six=1.11.0=py36_3
+  - sqlite=3.23.1=1
+  - tbb=2019.3=intel_0
+  - tbb4py=2019.3=py36_intel_0
+  - tcl=8.6.4=20
+  - terminado=0.8.1=py36_2
+  - testpath=0.3.1=py36_2
+  - tk=8.6.4=28
+  - tornado=4.5.2=py36_5
+  - traitlets=4.3.2=py36_3
+  - urllib3=1.22=py36_2
+  - wcwidth=0.1.7=py36_6
+  - webencodings=0.5.1=py36_0
+  - wheel=0.31.0=py36_3
+  - widgetsnbextension=3.2.0=py36_1
+  - xz=5.2.3=2
+  - zeromq=4.2.3=2
+  - zlib=1.2.11=5
+  - pip:
+    - backports.shutil-get-terminal-size==1.0.0
 
