--- a/files/testEnv2.yml
+++ b/files/testEnv2.yml
@@ -1,103 +1,48 @@
-name: testEnv2
+name: testEnvOld
 channels:
   - intel
   - defaults
 dependencies:
-  - icu=58.2=h9c2bf20_1
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libxml2=2.9.8=hf84eae3_0
-  - libxslt=1.1.32=h1312cb7_0
-  - lxml=4.2.5=py36hefd8a0e_0
-  - pandas-datareader=0.7.0=py36_0
-  - wrapt=1.10.11=py36h14c3975_2
-  - asn1crypto=0.24.0=py36_3
-  - backcall=0.1.0=py36_2
-  - backports=1.0=py36_9
-  - bleach=2.1.3=py36_2
-  - bzip2=1.0.6=17
-  - certifi=2018.1.18=py36_2
-  - cffi=1.11.5=py36_3
-  - chardet=3.0.4=py36_3
-  - cryptography=2.3=py36_0
-  - cycler=0.10.0=py36_7
-  - decorator=4.3.0=py36_3
-  - entrypoints=0.2.3=py36_2
-  - freetype=2.9=3
-  - get_terminal_size=1.0.0=py36_7
-  - html5lib=1.0.1=py36_4
-  - icc_rt=2019.1=intel_144
-  - idna=2.6=py36_3
-  - intel-openmp=2019.1=intel_144
-  - intelpython=2019.1=0
-  - ipykernel=4.6.1=py36_2
-  - ipython=6.3.1=py36_3
-  - ipython_genutils=0.2.0=py36_2
-  - ipywidgets=7.0.0=py36_2
-  - jedi=0.12.0=py36_2
-  - jinja2=2.9.6=py36_2
-  - jsonschema=2.6.0=py36_2
-  - jupyter=1.0.0=py36_7
-  - jupyter_client=5.1.0=py36_5
-  - jupyter_console=5.1.0=py36_2
-  - jupyter_core=4.4.0=py36_6
-  - kiwisolver=1.0.1=py36_2
-  - libffi=3.2.1=11
-  - libpng=1.6.35=0
-  - libsodium=1.0.16=3
-  - markupsafe=1.0=py36_3
-  - matplotlib=2.2.3=py36_0
-  - mistune=0.8.3=py36_2
-  - mkl=2019.1=intel_144
-  - mkl_fft=1.0.6=py36_2
-  - mkl_random=1.0.2=py36_0
-  - nbconvert=5.2.1=py36_2
-  - nbformat=4.4.0=py36_2
-  - notebook=5.2.2=py36_1
-  - numexpr=2.6.8=py36_1
-  - numpy=1.15.4=py36_2
-  - numpy-base=1.15.4=py36_2
-  - openssl=1.0.2p=0
-  - pandas=0.23.4=py36_4
-  - pandocfilters=1.4.1=py36_2
-  - parso=0.2.0=py36_2
-  - path.py=11.0.1=py36_2
-  - pexpect=4.2.1=py36_4
-  - pickleshare=0.7.4=py36_3
-  - pip=9.0.3=py36_1
-  - prompt_toolkit=1.0.15=py36_2
-  - ptyprocess=0.5.2=py36_2
-  - pycparser=2.18=py36_2
-  - pygments=2.2.0=py36_5
-  - pyopenssl=17.5.0=py36_2
-  - pyparsing=2.2.0=py36_2
-  - pysocks=1.6.7=py36_1
-  - python=3.6.5=11
-  - python-dateutil=2.6.0=py36_12
-  - pytz=2018.4=py36_3
-  - pyzmq=16.0.2=py36_6
-  - requests=2.20.0=py36_0
-  - scipy=1.1.0=np115py36_7
-  - setuptools=39.0.1=py36_0
-  - simplegeneric=0.8.1=py36_7
-  - six=1.11.0=py36_3
-  - sqlite=3.23.1=1
-  - tbb=2019.3=intel_0
-  - tbb4py=2019.3=py36_intel_0
-  - tcl=8.6.4=20
-  - terminado=0.8.1=py36_2
-  - testpath=0.3.1=py36_2
-  - tk=8.6.4=28
-  - tornado=4.5.2=py36_5
-  - traitlets=4.3.2=py36_3
-  - urllib3=1.22=py36_2
-  - wcwidth=0.1.7=py36_6
-  - webencodings=0.5.1=py36_0
-  - wheel=0.31.0=py36_3
-  - widgetsnbextension=3.2.0=py36_1
-  - xz=5.2.3=2
-  - zeromq=4.2.3=2
-  - zlib=1.2.11=5
+  - bzip2=1.0.6
+  - certifi=2018.1.18
+  - icc_rt=2019.1
+  - intel-openmp=2019.1
+  - intelpython=2019.1
+  - mkl=2019.1
+  - mkl_fft=1.0.6
+  - mkl_random=1.0.2
+  - numpy=1.15.4
+  - numpy-base=1.15.4
+  - openssl=1.0.2p
+  - pip=9.0.3
+  - python=2.7.14
+  - scipy=1.1.0
+  - setuptools=39.0.1
+  - sqlite=3.23.1
+  - tbb=2019.3
+  - tbb4py=2019.3
+  - tcl=8.6.4
+  - tk=8.6.4
+  - wheel=0.31.0
+  - zlib=1.2.11
   - pip:
-    - backports.shutil-get-terminal-size==1.0.0
+    - click==6.7
+    - click-plugins==1.0.3
+    - cligj==0.4.0
+    - descartes==1.1.0
+    - enum34==1.1.6
+    - fiona==1.7.9.post1
+    - geopandas==0.3.0
+    - multiprocessing==2.6.2.1
+    - munch==2.2.0
+    - pbr==4.0.2
+    - psycopg2==2.7.1
+    - pyproj==1.9.5.1
+    - pyshp==1.2.12
+    - shapely==1.6.1
+    - stevedore==1.28.0
+    - virtualenv==15.2.0
+    - virtualenv-clone==0.3.0
+    - virtualenvwrapper==4.8.2
+prefix: /home/j3grw01/anaconda3/envs/testEnvOld
 
